@@ -40,7 +40,7 @@ ANIMCYCLE      = 12
 PLODECYCLE     = 7
 BULLET_OFFSET  = 11
 BOUNCEWIDTH    = PLAYER_SPEED * 4
-DIFFICULTY     = 16
+DIFFICULTY     = 8
 BOMB_ODDS      = 130
 DANGER         = 10
 SORRYSCORE     = 20
