@@ -4,6 +4,9 @@
 # BREAK = change breaks existing code
 # BUG   = fixed a bug that was crashing
 
+Jan 18, 2001
+	cursor.read_xbm() renamed to cursor.load_xbm() [BREAK]
+
 Jan 17, 2001
 	documentation updated to include python modules too
 
